# AdGuardian-Term

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  crates.js  help.html  index.html  package-lock.json  package.json  quick-start.sh  search-index.js  settings.html  source-files.js  src-files.js  ttyd-Dockerfile
.github/: CHANGELOG.md  README.md
.github/workflows/: build-docker.yml  insert-contributors.yml  mirror.yml  publish-docs.yml  push-cargo.yml  release-binaries.yml
adguardian/: all.html  constant.BRANCHES.html  fn.main.html  fn.run.html  index.html  sidebar-items.js
adguardian/fetch/: index.html  sidebar-items.js
adguardian/fetch/fetch_filters/: fn.fetch_adguard_filter_list.html  index.html  sidebar-items.js  struct.AdGuardFilteringStatus.html  struct.Filter.html
adguardian/fetch/fetch_query_log/: fn.fetch_adguard_query_log.html  index.html  sidebar-items.js  struct.Query.html  struct.QueryResponse.html  struct.Question.html
adguardian/fetch/fetch_stats/: fn.deserialize_domains.html  fn.fetch_adguard_stats.html  index.html  sidebar-items.js  struct.DomainData.html  struct.StatsResponse.html
adguardian/fetch/fetch_status/: fn.fetch_adguard_status.html  index.html  sidebar-items.js  struct.StatusResponse.html
adguardian/ui/: fn.draw_ui.html  index.html  sidebar-items.js
adguardian/welcome/: fn.check_for_updates.html  fn.check_version.html  fn.get_env.html  fn.get_latest_version.html  fn.print_ascii_art.html  fn.print_error.html  fn.print_info.html  fn.verify_connection.html  fn.welcome.html  index.html  sidebar-items.js  struct.Crate.html  struct.CratesIoResponse.html
adguardian/widgets/: index.html  sidebar-items.js
adguardian/widgets/chart/: fn.convert_to_chart_data.html  fn.find_bounds.html  (+8 more)
search.desc/adguardian/: adguardian-desc-0-.js
search.index/: 0598af5517e3.js  074db2080e08.js  0b84367d3c76.js  102f4cec3cfb.js  16d5bcba612a.js  1b1db394aff7.js  288e1a0f5783.js  29cbfa17d809.js  3136e852931f.js  33883554224d.js  37e5137b7ca9.js  386e4a36eed2.js  3a2c53cb98dc.js  491bcf30956c.js  51132daa534f.js  5928922cb3db.js  5bde4517b1d5.js  5dee1329f5d5.js  6ab5d9a3ee4d.js  6b14fcd28891.js  6d149c8c9ae9.js  6f8025658e02.js  7229a5f2e0e9.js  root.js
search.index/crateNames/: ef79815ca76f.js
search.index/desc/: ff944d74c6bb.js
search.index/entry/: 4fea9a8e8136.js
search.index/function/: 66013a28f532.js
search.index/generic_inverted_index/: 4d951cdffc78.js
search.index/name/: cfd2165b9968.js
search.index/normalizedName/: 279c0606106d.js
search.index/path/: c36ed653956d.js
search.index/type/: 5f859849267e.js
src/: app.html  fetch.rs  fetch_stats.rs  main.rs  ui.rs  welcome.rs
src/adguardian/: main.rs.html  ui.rs.html  welcome.rs.html
src/fetch/: fetch_filters.rs  fetch_query_log.rs  fetch_stats.rs  fetch_status.rs  mod.rs
src/lib/: Docs.svelte  Hero.svelte  Icon.svelte
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/widgets/: chart.rs  filters.rs  gauge.rs  list.rs  mod.rs  status.rs  table.rs
(+53 files in other folders)
