[package]
name = "adguardian"
version = "0.1.0"
edition = "2021"
authors = ["Alicia Sykes"]
description = "A terminal dashboard for monitoring AdGuard Home DNS stats"
repository = "https://github.com/lissy93/adguardian"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error objecr for idiomatic error handling
anyhow = "1.0"
# For encoding auth headers
base64 = "0.13"
# Date + time parsing + manipulating
chrono = "0.4"
# Term manipulation for kb + mouse events
crossterm = { version = "0.22.0", features = ["serde"] }
# Extension of futures for async computation
futures = "0.3"
# Handling of terminal colors
colored = "2.0"
# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# Decerilization of JSON responses
serde = { version = "1.0", features = ["derive"] }
# Date + time manipulation
tokio = { version = "1", features = ["full"] }
# Terminal UI library
tui = { package = "ratatui", version = "0.20.1" }
